Fix an issue where the output panel grows one line at a time until the scrollbar appears, resizing the code area.

--- a/source/css/main.css
+++ b/source/css/main.css
@@ -55,6 +55,10 @@ body {
     min-height: 100px;
 }
 
+#output_container {
+    height: 300px;
+}
+
 #output {
     background-color: var(--output-background);
     width: 100%;
